# secoflex

./: .env  .gitignore  Dockerfile  docker-compose.yml  init.sh  pyproject.toml  script.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v2/: api.py
app/api/api_v2/endpoints/: asset.py  builds.py  deployments.py  field_schema.py  file.py  form_schema.py  job.py  result.py  test.py  toolbuilder.py  tools.py
app/core/: config.py  jwt.py  utils.py
app/crud/: asset_android_schema.py  asset_docker_schema.py  asset_domain_schema.py  asset_host_schema.py  asset_ios_schema.py  asset_repository_schema.py  asset_web_schema.py  builds.py  file.py  form_field_schema.py  form_schema.py  job.py  toolbuilder.py  tools.py
app/db/: mongodb_utils.py
app/models/: asset_android_schema.py  asset_schema.py  dbmodel.py  files.py  form_field_group_schem.py  form_field_schema.py  form_report_schema.py  form_schema.py  form_template.py  mongo_id.py  rwmodel.py
app/models/tool/: builds.py  deployments.py  executor.py  job.py  toobuilder.py  tool.py
app/models/tool/integrated/: docker_build.py
engine/integrations/: __init__.py  kafka.py  minio.py  rmq.py
engine/integrations/services/: build.py  provider.py
engine/integrations/services/provider/: provider.py
engine/integrations/services/provider/providers/: nomad.py
engine/tool/parser/v1/: SCRATCHPAD.md  __init__.py  main.py  sample.yaml
engine/tool/parser/v1/models/: model.py
playground/kube/: nomad.py  object_id.py  test.py
scripts/: .gitignore  setup.sh
tests/: conftest.py  kafka_test.py  minio_test.py  test_file.tar
